# figure-backend

./: Cargo.toml  README.MD  architecture.pum  script.sql
backend/: .containerignore  .dockerignore  Cargo.toml  Containerfile  kube.yaml  loadtest.js
backend/src/: content_store.rs  context.rs  environment.rs  main.rs  server_errors.rs
backend/src/domain/: mod.rs
backend/src/domain/models/: figure.rs  profile.rs  user.rs
backend/src/entities/: mod.rs
backend/src/entities/dtos/: figure_dto.rs  profile_dto.rs
backend/src/entities/figure/: dtos.rs  figure_dto.rs  figure_infra.rs  figure_repository.rs  figure_routes.rs  figure_service.rs  infra.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  traits.rs
backend/src/entities/profile/: dtos.rs  infra.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  traits.rs
backend/src/entities/session/: layers.rs  mod.rs  session_dtos.rs  session_repository.rs  traits.rs
backend/src/entities/user/: dtos.rs  infra.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  traits.rs  user.rs
backend/src/infrastructure/: mod.rs  traits.rs
backend/src/infrastructure/models/: figure.rs  profile.rs  user.rs
backend/src/layers/: auth_layer.rs  correlation_id_layer.rs  mod.rs  tracing_layer.rs
backend/src/middleware/: mod.rs  tracing_layer.rs
backend/src/repositories/: entities.rs  figure_repository.rs  mod.rs  profile_repository.rs  session_repository.rs  traits.rs  transaction.rs  user_repository.rs
backend/src/routes/: authentication_routes.rs  figure_routes.rs  mod.rs  profile_routes.rs
backend/src/services/: figure_service.rs  mod.rs  profile_service.rs  traits.rs  user_service.rs
backend/src/tests/unit_tests/: mod.rs
backend/src/tests/unit_tests/mocks/repositories/: mock_profile_repository.rs  mock_session_repository.rs  mock_transaction.rs  mock_user_repository.rs
backend/src/tests/unit_tests/mocks/utilities/: mod.rs  secure_rand_generator.rs
backend/src/tests/unit_tests/services/user_service/: helpers.rs  test_sign_up.rs
backend/src/utilities/: mod.rs  secure_rand_generator.rs
database/: Containerfile  ddl.sql
kubernetes/: ingress-nginx-1.8.2.yaml  minikube-setup.sh  profile-data.yaml  profile-deployment.yaml  profile-service.yaml
scripts/: db_dockerfile  run-tests.sh  seed.sql
src/: auth_layer.rs  content_store.rs  context.rs  database.rs  environment.rs  main.rs  push_notification.rs  routes.rs  server_errors.rs  session_store.rs
src/domain/models/: figure.rs  mod.rs  profile.rs  user.rs
src/entities/: figure.rs  mod.rs  profile.rs  types.rs  user.rs
src/entities/dtos/: figure_dto.rs  mod.rs  profile_dto.rs  session_dtos.rs  user_dto.rs
src/infrastructure/models/: figure.rs  mod.rs  profile.rs  user.rs
src/layers/: mod.rs
src/orm_entities/: figure.rs  mod.rs  prelude.rs  profile.rs  user.rs
src/repositories/: entities.rs  figure_repository.rs  mod.rs  profile_repository.rs  repository.rs  session_repository.rs  traits.rs  transaction.rs  user_profile_repository.rs  user_repository.rs
src/routes/: authentication_routes.rs  figure_routes.rs  misc_routes.rs  mod.rs  profile_routes.rs
src/services/: figure_service.rs  mod.rs  profile_service.rs  test_service.rs  test_service2.rs  traits.rs  user_service.rs
src/tests/: mod.rs  test_routes.rs  test_routes_authenticated.rs  test_routes_unauthenticated.rs
src/tests/mock_repositories/: mock_profile_repository.rs  mock_session_repository.rs  mock_transaction.rs  mock_user_repository.rs  mock_user_service.rs  mod.rs  transaction.rs
src/tests/mocks/: mod.rs
src/tests/mocks/repositories/: mock_profile_repository.rs  mock_session_repository.rs  mock_transaction.rs  mock_user_repository.rs
src/tests/services/: mod.rs  test_user_service.rs
src/tests/services/unit_tests/: mod.rs  test_user_service.rs
src/tests/services/unit_tests/user_service/: helpers.rs  mod.rs  test_sign_in.rs  test_sign_up.rs  test_signup.rs
src/tests/unit_tests/mocks/repositories/: mock_session_repository.rs  mock_transaction.rs  mock_user_repository.rs
src/tests/unit_tests/services/user_service/: test_sign_up.rs
src/utilities/: logging.rs  mod.rs  secure_rand_generator.rs  traits.rs
