[package]
name = "figure-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.67"
axum = { version = "0.6.2", features = ["multipart"] }
axum-macros = "0.3.0"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
tower-cookies = { version = "0.8.0", features = ["signed", "private"] }
cookie = { version = "0.16.2", features = ["secure"] }
async-trait = "0.1.60"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.10.0"
argon2 = "0.4.1"
rand_core = "0.6.4"
unicode-segmentation = "1.10.0"
regex = "1.7.0"
lazy_static = "1.4.0"
zeroize = "1.5.7"
redis = { version = "0.22.1", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }
uuid = { version = "1.2.2", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
url = "2.3.1"
futures = "0.3.25"
aws-sdk-s3 = "0.23.0"

[dev-dependencies]
hyper = "0.14.23"
mime = "0.3.16"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false